--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Bootstrap Template Atlas</title>
-    <meta name="description" content="Free bootstrap template Atlas">
+    <title>At the Start</title>
+    <meta name="description" content="Start here">
     <link rel="icon" href="img/favicon.png" sizes="32x32" type="image/png">
     <!-- custom.css -->
     <link rel="stylesheet" href="css/custom.css">
@@ -36,30 +36,30 @@
             	To Start Business
             </h1>
             <p data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="lead text-white my-4">
-                Lorem ipsum dolor sit amet, id nec enim autem oblique, ei dico mentitum duo.
-                <br> Illum iusto laoreet his te. Lorem partiendo mel ex. Ad vitae admodum voluptatum per.
+                Launching April 2018
+                <br> New start-up in Rotterdam
             </p>
             <a href="#" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="btn my-4 font-weight-bold atlas-cta cta-green">Get Started</a>
         </div>
     </div>
     <!-- three-blcok -->
     <div class="container my-5 py-2">
-        <h2 class="text-center font-weight-bold my-5">Smartest protection for your site</h2>
+        <h2 class="text-center font-weight-bold my-5">Join us now</h2>
         <div class="row">
             <div data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
                 <img src="img/smart-protect-1.jpg" alt="Anti-spam" class="mx-auto">
-                <h4>Anti-spam</h4>
-                <p>Lorem ipsum dolor sit amet porro his no his deleniti</p>
+                <h4>Welcome to our playground</h4>
+                <p>Innovative new platform were like-minded people meet each other</p>
             </div>
             <div data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
                 <img src="img/smart-protect-2.jpg" alt="Phishing Detect" class="mx-auto">
-                <h4>Phishing Detect</h4>
-                <p>Ne error antiopam usu. Sed vocen concludaturque ea</p>
+                <h4>Are you ready?</h4>
+                <p>You are young, ambitious and ready to explore the world and kick-start your career your way. We totally get it!</p>
             </div>
             <div data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
                 <img src="img/smart-protect-3.jpg" alt="Smart Scan" class="mx-auto">
-                <h4>Smart Scan</h4>
-                <p>Et usu ocurreret elaboraret doctus prodesse assueverit.</p>
+                <h4>Join us now!</h4>
+                <p>We are looking for new young entrepreneurs to join a new idea/movement</p>
             </div>
         </div>
     </div>
@@ -173,9 +173,9 @@
                         <br> augue disputando in vim. Erat fugit sit at, ius lorem.
                     </p>
                     <ul class="list-unstyled">
-                        <li>Email : company_email@com</li>
-                        <li>Phone : 361-688-5824</li>
-                        <li>Address : 4826 White Avenue, Corpus Christi, Texas</li>
+                        <li>Email : info.atthestart@gmail.com</li>
+                        <li>Phone : 06-12 34 56 78 </li>
+                        <li>Address : Burgermeester Oudlaan, Rotterdam, The Netherlands</li>
                     </ul>
                 </div>
                 <div class="col-md-6">
@@ -206,7 +206,7 @@
         <div class="container">
             <div class="row justify-content-between">
             	<div class="col-md-6 text-white align-self-center text-center text-md-left my-2">
-                    Copyright © 2018 Chen, Yi-Ya.
+                    Copyright © 2018 Ramoe Jagesar, Student & Founder of @The Start
                 </div>
                 <div class="col-md-6 align-self-center text-center text-md-right my-2" id="social-media">
                     <a href="#" class="d-inline-block text-center ml-2">
