--- a/index.html
+++ b/index.html
@@ -36,25 +36,25 @@
             	To Start Business
             </h1>
             <p data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="lead text-white my-4">
-                Launching April 2018
-                <br> New start-up in Rotterdam
+                New start-up in Rotterdam
+                <br> Launching April 2018
             </p>
-            <a href="#" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="btn my-4 font-weight-bold atlas-cta cta-green">Get Started</a>
+            <a href="#" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="btn my-4 font-weight-bold atlas-cta cta-green">Coming soon</a>
         </div>
     </div>
     <!-- three-blcok -->
     <div class="container my-5 py-2">
-        <h2 class="text-center font-weight-bold my-5">Join us now</h2>
+        <h2 class="text-center font-weight-bold my-5">Welcome to our playground</h2>
         <div class="row">
             <div data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
                 <img src="img/smart-protect-1.jpg" alt="Anti-spam" class="mx-auto">
-                <h4>Welcome to our playground</h4>
+                <h4>What we do</h4>
                 <p>Innovative new platform were like-minded people meet each other</p>
             </div>
             <div data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
                 <img src="img/smart-protect-2.jpg" alt="Phishing Detect" class="mx-auto">
-                <h4>Are you ready?</h4>
-                <p>You are young, ambitious and ready to explore the world and kick-start your career your way. We totally get it!</p>
+                <h4>Our values</h4>
+                <p>We believe that everyone should focus on what they love and what they are good at</p>
             </div>
             <div data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
                 <img src="img/smart-protect-3.jpg" alt="Smart Scan" class="mx-auto">
@@ -206,7 +206,7 @@
         <div class="container">
             <div class="row justify-content-between">
             	<div class="col-md-6 text-white align-self-center text-center text-md-left my-2">
-                    Copyright © 2018 Ramoe Jagesar, Student & Founder of @The Start
+                    Copyright © 2018, Ramoe Jagesar
                 </div>
                 <div class="col-md-6 align-self-center text-center text-md-right my-2" id="social-media">
                     <a href="#" class="d-inline-block text-center ml-2">
