--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     </p>
                     <ul class="list-unstyled">
                         <li>Email : info.atthestart@gmail.com</li>
-                        <li>Phone : 06-12 34 56 78 </li>
+                        <li>Phone : - </li>
                         <li>Address : Burgermeester Oudlaan, Rotterdam, The Netherlands</li>
                     </ul>
                 </div>
