--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
                 <div class="col-md-6 text-white">
                     <h2 class="font-weight-bold">Contact Us</h2>
                     <p class="my-4">
-                        Te iisque labitur eos, nec sale argumentum scribentur,
-                        <br> augue disputando in vim. Erat fugit sit at, ius lorem.
+                        We'd love to hear from you! If you have any questions, suggestions, comments,
+                        <br> advice or you just want to share something with us, please get in touch.
                     </p>
                     <ul class="list-unstyled">
                         <li>Email : info.atthestart@gmail.com</li>
