--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>At the Start</title>
+    <title>@TheStart</title>
     <meta name="description" content="Start here">
     <link rel="icon" href="img/favicon.png" sizes="32x32" type="image/png">
     <!-- custom.css -->
@@ -25,7 +25,7 @@
                 <div class="row justify-content-between">
                     <div class="col-2">
                         <img src="img/logo.png" alt="logo">
-			<p>@TheStart</p>
+			<h2 class="font-weight-bold">@TheStart</h2>
                     </div>
                     <div class="col-6 align-self-center text-right">
                         <a href="#" class="text-white lead">Get Early Access</a>
