--- a/index.html
+++ b/index.html
@@ -25,17 +25,19 @@
                 <div class="row justify-content-between">
                     <div class="col-2">
                         <img src="img/logo.png" alt="logo">
-			<h2 class="font-weight-bold">@TheStart</h2>
+			<h1 data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="display-3 text-white font-weight-bold my-5">
+				@TheStart
+			</h1>
                     </div>
                     <div class="col-6 align-self-center text-right">
                         <a href="#" class="text-white lead">Get Early Access</a>
                     </div>
                 </div>
             </header>
-            <h1 data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="display-3 text-white font-weight-bold my-5">
+		<h2 class="font-weight-bold">
             	A New Way<br>
             	To Start Business
-            </h1>
+		</h2>
             <p data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="lead text-white my-4">
                 New start-up in Rotterdam
                 <br> Launching April 2018
