--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
                 <div class="row justify-content-between">
                     <div class="col-2">
                         <img src="img/logo.png" alt="logo">
-			<h1 data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="display-3 text-white font-weight-bold my-5">
-				@TheStart
-			</h1>
                     </div>
                     <div class="col-6 align-self-center text-right">
                         <a href="#" class="text-white lead">Get Early Access</a>
                     </div>
+		<h1 data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="display-3 text-white font-weight-bold my-5">
+		@TheStart
+		</h1>
                 </div>
             </header>
-		<h2 class="font-weight-bold">
+		<h2 class="lead text-white my-4">
             	A New Way<br>
             	To Start Business
 		</h2>
             <p data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="lead text-white my-4">
-                New start-up in Rotterdam
-                <br> Launching April 2018
+                Start-up in Rotterdam
+                <br> Launching May 2018
             </p>
             <a href="#" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="btn my-4 font-weight-bold atlas-cta cta-green">Coming soon</a>
         </div>
@@ -52,7 +52,7 @@
             <div data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
                 <img src="img/smart-protect-1.jpg" alt="Anti-spam" class="mx-auto">
                 <h4>What we do</h4>
-                <p>Innovative new platform were like-minded people meet each other</p>
+                <p>Innovative platform were like-minded people meet each other</p>
             </div>
             <div data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
                 <img src="img/smart-protect-2.jpg" alt="Phishing Detect" class="mx-auto">
@@ -62,7 +62,7 @@
             <div data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
                 <img src="img/smart-protect-3.jpg" alt="Smart Scan" class="mx-auto">
                 <h4>Join us now!</h4>
-                <p>We are looking for new young entrepreneurs to join a new idea/movement</p>
+                <p>We are looking for young entrepreneurs to join a new idea/movement</p>
             </div>
         </div>
     </div>
