--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
             	To Start Business
 		</h2>
             <p data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="lead text-white my-4">
-                Start-up in Rotterdam
-                <br> Launching May 2018
+                Launching May 2018
             </p>
             <a href="#" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="btn my-4 font-weight-bold atlas-cta cta-green">Coming soon</a>
         </div>
