--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
         <div class="container my-5">
             <div class="row justify-content-between text-center text-md-left">
                 <div data-aos="fade-right" data-aos-duration="1000" data-aos-once="true" class="col-md-6">
-                    <h2 class="font-weight-bold">Take a look inside</h2>
-                    <p class="my-4">Te iisque labitur eos, nec sale argumentum scribentur no,
-                        <br> augue disputando in vim. Erat fugit sit at, ius lorem deserunt deterruisset no.</p>
+                    <h2 class="font-weight-bold">Match people with ideas</h2>
+                    <p class="my-4">You are entreprenurial, creative and have a great idea to start your own business,
+                        <br> but have not found the right people to get started.</p>
                     <a href="#" class="btn my-4 font-weight-bold atlas-cta cta-blue">Learn More</a>
                 </div>
                 <div data-aos="fade-left" data-aos-duration="1000" data-aos-once="true" class="col-md-6 align-self-center">
@@ -85,10 +85,9 @@
         <div class="container">
             <div class="row justify-content-between text-center text-md-left">
                 <div data-aos="fade-left" data-aos-duration="1000" data-aos-once="true" class="col-md-6 flex-md-last">
-                    <h2 class="font-weight-bold">Safe and reliable</h2>
+                    <h2 class="font-weight-bold">To people with skills</h2>
                     <p class="my-4">
-                        Duo suas detracto maiestatis ad, commodo lucilius invenire nec ad,
-                        <br> eum et oratio disputationi. Falli lobortis his ad
+                        You are good at something you like and want to become an entrepreneur but does not have a creative idea.
                     </p>
                     <a href="#" class="btn my-4 font-weight-bold atlas-cta cta-blue">Learn More</a>
                 </div>
