--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <h2 class="font-weight-bold">Contact Us</h2>
                     <p class="my-4">
                         We'd love to hear from you! If you have any questions, suggestions, comments,
-                        <br> advice or you just want to share something with us, please get in touch.
+                        advice or you just want to share something with us, please get in touch.
                     </p>
                     <ul class="list-unstyled">
                         <li>Email : info.atthestart@gmail.com</li>
