--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h2 class="text-center font-weight-bold my-5">Welcome to our playground</h2>
         <div class="row">
             <div data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
-                <img src="img/smart-protect-1.jpg" alt="Anti-spam" class="mx-auto">
+                <img src="img/smart-protect-3.jpg" alt="Anti-spam" class="mx-auto">
                 <h4>What we do</h4>
                 <p>Innovative platform were like-minded people meet each other</p>
             </div>
@@ -58,7 +58,7 @@
                 <p>We believe that everyone should focus on what they love and what they are good at</p>
             </div>
             <div data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
-                <img src="img/smart-protect-3.jpg" alt="Smart Scan" class="mx-auto">
+                <img src="img/smart-protect-1.jpg" alt="Smart Scan" class="mx-auto">
                 <h4>Join us now!</h4>
                 <p>We are looking for young entrepreneurs to join a new idea/movement</p>
             </div>
@@ -70,8 +70,8 @@
             <div class="row justify-content-between text-center text-md-left">
                 <div data-aos="fade-right" data-aos-duration="1000" data-aos-once="true" class="col-md-6">
                     <h2 class="font-weight-bold">Match people with ideas</h2>
-                    <p class="my-4">You are entreprenurial, creative and have a great idea to start your own business,
-                        <br> but have not found the right people to get started.</p>
+                    <p class="my-4">You are entrepreneurial, creative and have a great idea to start your own business,
+                        but have not found the right people to get started.</p>
                     <a href="#" class="btn my-4 font-weight-bold atlas-cta cta-blue">Learn More</a>
                 </div>
                 <div data-aos="fade-left" data-aos-duration="1000" data-aos-once="true" class="col-md-6 align-self-center">
@@ -87,7 +87,7 @@
                 <div data-aos="fade-left" data-aos-duration="1000" data-aos-once="true" class="col-md-6 flex-md-last">
                     <h2 class="font-weight-bold">To people with skills</h2>
                     <p class="my-4">
-                        You are good at something you like and want to become an entrepreneur but does not have a creative idea.
+                        You are good at something and ready to use your skills to start something great.
                     </p>
                     <a href="#" class="btn my-4 font-weight-bold atlas-cta cta-blue">Learn More</a>
                 </div>
